fixed broken css

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+@import url('micons/micons.css');
+
 html {
   font-size: 10px;
 }
@@ -175,6 +177,22 @@ ul {
 @media only screen and (max-width: 1024px) {
   .bgrid {
     padding: 0 18px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .bgrid {
+    padding: 0 15px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .bgrid {
+    padding: 0 10px;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .bgrid {
+    padding: 0;
   }
 }
 .pace {
@@ -724,6 +742,65 @@ button.stroke {
     padding-left: 50px;
   }
 }
+
+@media only screen and (max-width: 768px) {
+  #resume .timeline-wrap::before {
+    left: 2.4rem;
+  }
+  #resume .timeline-ico {
+    left: 2.4rem;
+  }
+  #resume .timeline-header {
+    float: none;
+    width: auto;
+    padding-right: 15px;
+    text-align: left;
+  }
+  #resume .timeline-header h3 {
+    font-size: 2rem;
+  }
+  #resume .timeline-header p {
+    font-size: 1.5rem;
+    margin-bottom: 1.5rem;
+  }
+  #resume .timeline-content {
+    margin: 0;
+  }
+  #resume .timeline-content h4 {
+    padding-bottom: 0;
+    padding-top: 2.1rem;
+    margin-bottom: 0.6rem;
+    font-size: 1.7rem;
+  }
+  #resume .timeline-content h4::after {
+    bottom: auto;
+    top: 0;
+  }
+  #resume .timeline-header,
+  #resume .timeline-content {
+    padding-left: 7rem;
+  }
+}
+@media only screen and (max-width: 480px) {
+  #resume .resume-header h2 {
+    font-size: 2.2rem;
+  }
+  #resume .timeline-wrap::before {
+    left: 1.8rem;
+  }
+  #resume .timeline-ico {
+    height: 3.6rem;
+    width: 3.6rem;
+    line-height: 3.6rem;
+    left: 1.8rem;
+    margin-left: -1.8rem;
+    font-size: 1.5rem;
+  }
+  #resume .timeline-header,
+  #resume .timeline-content {
+    padding-left: 5.5rem;
+  }
+}
 #services {
   background: #313131 url(../images/bg.jpeg) no-repeat center;
   -webkit-background-size: cover;
@@ -1046,4 +1123,64 @@ img.icons-svgs {
 
 .resume-date {
   color: #7d2900 !important;
+}
+
+#stats {
+  background: #990047;
+  padding-top: 7.2rem;
+  padding-bottom: 6rem;
+  text-align: center;
+}
+#stats .row {
+  max-width: 1440px;
+}
+#stats .stat {
+  border-left: 1px solid rgba(255, 255, 255, 0.12);
+  min-height: 17.4rem;
+}
+#stats .stat:first-child {
+  border: none;
+}
+#stats .icon-part i {
+  font-size: 4.8rem;
+  color: #000000;
+}
+#stats .stat-count {
+  color: #ffffff;
+  font-size: 3.6rem;
+  margin-top: 1.2rem;
+  margin-bottom: 0;
+  font-family: 'poppins-medium', sans-serif;
+  color: white;
+}
+#stats .stat-title {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+/**
+ * responsive:
+ * stats
+ * -------------------------------------------------------------------
+ */
+@media only screen and (max-width: 1024px) {
+  #stats .stat:nth-child(n) {
+    border-left: 1px solid rgba(255, 255, 255, 0.12);
+    padding-bottom: 1.5rem;
+  }
+  #stats .stat:nth-child(3n + 1) {
+    border: none;
+  }
+}
+@media only screen and (max-width: 768px) {
+  #stats .stat:nth-child(n) {
+    border-left: 1px solid rgba(255, 255, 255, 0.12);
+  }
+  #stats .stat:nth-child(2n + 1) {
+    border: none;
+  }
+}
+@media only screen and (max-width: 600px) {
+  #stats .stat:nth-child(n) {
+    border: none;
+  }
 }
